@@ -162,6 +162,7 @@ Those improvements were implemented by Albina Starykova as part of an [Outreachy
  * Migrate initDismissibles behaviour to a Stimulus controller `w-disimissible` (Loveth Omokaro)
  * Replace jQuery autosize v3 with Stimulus `w-autosize` controller using autosize npm package v6 (Suyash Srivastava)
  * Update `w-action` controller to support a click method (Suyash Srivastava)
+ * Migrate the site settings switcher select from jQuery to a refined version of the `w-action` controller usage (Aadi jindal, LB (Ben) Johnston)
 
 
 ## Upgrade considerations
